refactor: SSE 및 알림 시스템 성능 최적화 및 인증 통합
- JWT 기반 인증을 통한 DB 연결 최적화 (auth/me 엔드포인트)
- SSE AsyncRequestTimeoutException 해결 (타임아웃 10분 연장)
- 불필요한 배치 읽기 처리 제거 (NotificationController)
- JWT/SSE 인증 필터 통합 및 일관성 확보
- Jaeger 트레이싱 및 Firebase 의존성 정리
- K6 10,000 동시 연결 테스트 최적화